[package]
name = "tailcall-chunk"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "A Rust implementation of a persistent data structure for efficient append and concatenation operations."
repository = "https://github.com/tailcallhq/tailcall-chunk"
documentation = "https://docs.rs/tailcall-chunk"

[dependencies]

[dev-dependencies]
gh-workflow = "0.4"
